# powerlink-rs

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
.github/workflows/: ci.yml  docs.yml  lint.yml
crates/powerlink-io-embedded/: Cargo.toml
crates/powerlink-io-linux/: Cargo.toml
crates/powerlink-io-linux/examples/: io_module.rs
crates/powerlink-io-linux/src/: lib.rs
crates/powerlink-io-linux/tests/: docker_test.rs  loopback_test.rs
crates/powerlink-io-linux/tests/loopback_test_resources/: Dockerfile  docker-compose.yml
crates/powerlink-io-windows/: Cargo.toml
crates/powerlink-io-windows/src/: lib.rs
crates/powerlink-rs/: Cargo.toml
crates/powerlink-rs-embedded/: Cargo.toml
crates/powerlink-rs-linux/: Cargo.toml
crates/powerlink-rs-linux/examples/: io_module.rs  mn_web_monitor.rs
crates/powerlink-rs-linux/examples/io_module_resources/: Dockerfile  docker-compose.yml
crates/powerlink-rs-linux/examples/mn_web_monitor_resources/: Dockerfile  docker-compose.yml
crates/powerlink-rs-linux/src/: lib.rs
crates/powerlink-rs-linux/tests/: loopback_test.rs
crates/powerlink-rs-linux/tests/loopback_test_resources/: Dockerfile  docker-compose.yml
crates/powerlink-rs-monitor/: Cargo.toml
crates/powerlink-rs-monitor/src/: lib.rs  model.rs  server.rs
crates/powerlink-rs-monitor/src/web/: monitor.html
crates/powerlink-rs-windows/: Cargo.toml
crates/powerlink-rs-windows/src/: lib.rs
crates/powerlink-rs-xdc/: Cargo.toml  README.md
crates/powerlink-rs-xdc/docs/schema/: CommonElements.xsd  CommonElements_Modular.xsd  ISO15745ProfileContainer.xsd  Powerlink_Main.xsd  ProfileBody_CommunicationNetwork_Powerlink.xsd  ProfileBody_CommunicationNetwork_Powerlink_Modular_Child.xsd  ProfileBody_CommunicationNetwork_Powerlink_Modular_Head.xsd  ProfileBody_Device_Powerlink.xsd  ProfileBody_Device_Powerlink_Modular_Child.xsd  ProfileBody_Device_Powerlink_Modular_Head.xsd  TextResource.xsd
crates/powerlink-rs-xdc/docs/template/: 1000-11FF_NMT-ERR-CFM-DIA.xml  1200-13FF_SDO.xml  1C00-1CFF_DLL_PDO.xml  1D00-1EFF_RT1-NWL.xml  1F00-1FFF_CFM_PDL_INP_NMT.xml  CommunicationProfileArea.txt
crates/powerlink-rs-xdc/src/: builder.rs  converter.rs  error.rs  lib.rs  model.rs  parser.rs  resolver.rs  types.rs
crates/powerlink-rs-xdc/src/builder/: app_process.rs  device_function.rs  device_manager.rs  mod.rs  modular.rs  net_mgmt.rs
crates/powerlink-rs-xdc/src/model/: app_layers.rs  app_process.rs  common.rs  device_function.rs  device_manager.rs  header.rs  identity.rs  mod.rs  modular.rs  net_mgmt.rs
crates/powerlink-rs-xdc/src/resolver/: app_process.rs  device_function.rs  device_manager.rs  header.rs  identity.rs  mod.rs  modular.rs  net_mgmt.rs  od.rs  utils.rs
crates/powerlink-rs-xdc/tests/: parsing.rs  robustness.rs
crates/powerlink-rs-xdc/tests/data/: MyDevice.xdd  MyDevice_extended.xdd  MyDevice_static.xdd
crates/powerlink-rs/src/: common.rs  hal.rs  lib.rs  log.rs  nmt.rs  types.rs
crates/powerlink-rs/src/frame/: basic.rs  codec.rs  control.rs  cs_state_machine.rs  dll_error.rs  mod.rs  ms_state_machine.rs  poll.rs  state_machine.rs
crates/powerlink-rs/src/frame/control/: asnd.rs  ident_response.rs  mod.rs  soa.rs  soc.rs  status_response.rs
crates/powerlink-rs/src/frame/error/: counters.rs  manager.rs  mod.rs  status_response.rs  traits.rs  types.rs
crates/powerlink-rs/src/frame/poll/: mod.rs  preq.rs  pres.rs
crates/powerlink-rs/src/nmt/: cn_state_machine.rs  events.rs  flags.rs  mn_state_machine.rs  mod.rs  state_machine.rs  states.rs
crates/powerlink-rs/src/node/: cn.rs  handler.rs  mn.rs  mod.rs  pdo_handler.rs
crates/powerlink-rs/src/node/cn/: events.rs  main.rs  mod.rs  payload.rs  state.rs  tick.rs
crates/powerlink-rs/src/node/mn/: config.rs  cycle.rs  events.rs  main.rs  mod.rs  payload.rs  scheduler.rs  state.rs  tick.rs  validation.rs
crates/powerlink-rs/src/od/: commands.rs  constants.rs  entry.rs  error_history.rs  mod.rs  pdo_validator.rs  predefined.rs  storage.rs  utils.rs  value.rs
crates/powerlink-rs/src/pdo/: error.rs  mapping.rs  mod.rs
crates/powerlink-rs/src/sdo/: asnd.rs  client.rs  client_connection.rs  client_manager.rs  command.rs  embedded.rs  embedded_client.rs  embedded_server.rs  handlers.rs  mod.rs  pdo.rs  sequence.rs  sequence_handler.rs  server.rs  state.rs  transport.rs  udp.rs
crates/powerlink-rs/src/sdo/command/: base.rs  handler.rs  mod.rs  payload.rs
crates/powerlink-rs/tests/: boot_up_test.rs
crates/powerlink-rs/tests/simulator/: interface.rs  mod.rs
docs/: CONTRIBUTING.md
docs/architecture/: architecture_overview.md
docs/specification/: specification_overview.md
examples/linux/: cn_listener.rs
