[workspace]
members = [
    "crates/powerlink-rs",
    "crates/powerlink-io-linux",
    "crates/powerlink-io-windows",
    "crates/powerlink-io-embedded",
]
default-members = [
    "crates/powerlink-rs",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["Fabio Thomaz Molinar <fabiomolinar@gmail.com>"]
description = "Robust, reliable, and platform-independent Rust implementation of the Ethernet Powerlink protocol."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/fabiomolinar/powerlink-rs"
edition = "2024"

[workspace.dependencies]
# Define shared core dependency version here
powerlink-rs = { path = "crates/powerlink-rs", version = "0.1.0" }