[package]
name = "powerlink-io-windows"
description = "Raw Ethernet I/O driver for Windows, adhering to the powerlink-core HAL."
# Inherit package metadata
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true


[dependencies]
powerlink-rs = { path = "../powerlink-rs", version = "0.1.0", features = ["std"] }
# Windows raw packet handling often requires specific bindings or wrappers (like WinPcap/Npcap),
# but we leave placeholders here as direct standard Rust net APIs usually aren't sufficient for raw Ethernet.