[package]
name = "powerlink-io-windows"
description = "Raw Ethernet I/O driver for Windows, adhering to the powerlink-core HAL."
# Inherit package metadata
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true


[dependencies]
powerlink-rs = { path = "../powerlink-rs", version = "0.1.0", features = ["std"] }
pnet = "0.35"