[package]
name = "powerlink-rs-linux"
description = "Raw Ethernet I/O driver for Linux, adhering to the powerlink-core HAL."
# Inherit package metadata
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
pcap = ["dep:pcap"] # Define the new "pcap" feature

[dependencies]
# Enable both std and the new sdo-udp feature for the core dependency
powerlink-rs = { path = "../powerlink-rs", version = "0.0.0", features = ["std", "sdo-udp"] }
pnet = "0.35"
pcap = { version = "2.3.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
log = "0.4.28"
lazy_static = "1.5.0"