[package]
name = "powerlink-rs-monitor"
description = "A library for building web-based diagnostic monitors for powerlink-rs nodes."
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
# 'in-process' is the default, enabling the RT-safe channel logic
default = ["in-process"]
in-process = ["dep:crossbeam-channel"]

# 'standalone' enables the SDO-based logic, which requires a full node stack
standalone = ["powerlink-rs/std"]

[dependencies]
# Core POWERLINK types and traits are always needed
powerlink-rs = { path = "../powerlink-rs", version = "0.0.0" }

# Web server + JSON (common to both modes)
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tokio-websockets = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"

# -- Dependencies for 'in-process' mode --
# Used for the RT-safe channel between the node thread and server thread
crossbeam-channel = { version = "0.5.15", optional = true }
