[package]
name = "powerlink-rs-xdc"
description = "A no_std-compatible parser for POWERLINK XDC (XML Device Configuration) files."
# Inherit package metadata
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
powerlink-rs = { path = "../powerlink-rs", version = "0.0.0", default-features = false }
log = { version = "0.4.28", default-features = false }

# XML parsing. Disable default "std" feature.
quick-xml = { version = "0.38.4", default-features = false, features = ["serialize"] }

# Serde for deserializing the XML structs. Disable default "std" feature.
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }

# The 'hex' crate is needed to convert "0x..." strings to Vec<u8> and back.
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }