[package]
name = "powerlink-rs"
description = "Platform-agnostic core logic for Ethernet POWERLINK Rust implementation."
# Inherit package metadata
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
# Default is no_std support for embedded targets.
default = []

# Enables features that rely on the standard library (e.g., error handling, filesystem access, large buffers).
std = []

# If needed later for complex structures in no_std (Phase 3/5: SDO, PDO mappings)
alloc = [] 